Can't use --development on run command
  * .github/workflows/main.yml: separate build --development & run.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: alire-project/setup-alire@v4
-      - run:  alr run --development
+      - run: |
+          alr build --development
+          alr run
+        
