--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: alire-project/setup-alire@v4
-      - run: |
-          alr build --development
-          alr run
+      - run: alr build --development
+      - run: alr run
         
