Started work on real symbolic traceback for Darwin.
  * alire.toml: changed to match movement of compiler code into
      libgnat/.
  * traceback.gpr (Linker): capitalized.
  * src/s-trasym.adb: removed. It no longer "fits" in that directory.
      Also, gprbuild (or the compiler?) won't let us have an actual
      body and a "named" body in the same build.
  * libgnat/.gitignore: new.
  * libgnat/alire.toml: likewise.
  * libgnat/libgnat.gpr (Compiler): call up "warnings_off.adc".
    (Naming): handle sources where the GCC build system copies them
      to the build directory using their proper names.
  * libgnat/warnings_off.adc: suppress the warning where a unit's file
      name doesn't match its source name.
  * libgnat/src/s-dwalin.adb: copied from GCC 15 20241102 sources.
  * libgnat/src/s-dwalin.ads: likewise.
  * libgnat/src/s-mmap.adb: likewise.
  * libgnat/src/s-mmap.ads: likewise.
  * libgnat/src/s-mmauni__long.ads: likewise.
  * libgnat/src/s-mmosin__unix.adb: likewise.
  * libgnat/src/s-mmosin__unix.ads: likewise.
  * libgnat/src/s-objrea.adb: likewise.
  * libgnat/src/s-objrea.ads: likewise.
  * libgnat/src/s-trasym__dwarf.adb: likewise.

--- a/libgnat/alire.toml
+++ b/libgnat/alire.toml
@@ -1,5 +1,5 @@
-name = "traceback"
-description = "Demo of proposed traceback improvement"
+name = "libgnat"
+description = ""
 version = "0.1.0-dev"
 
 authors = ["Simon Wright"]
@@ -8,11 +8,3 @@ maintainers-logins = ["simonjwright"]
 licenses = "GPL-3.0-or-later WITH GCC-exception-3.1"
 website = ""
 tags = []
-
-executables = ["traceback"]
-
-[[depends-on]]
-libgnat = "*"
-
-[[pins]]
-libgnat = { path = "libgnat" }
