--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-13, macos-latest]
-        # macos-13 is x86_64, macos-latest is aarch64.
+        os: [macos-13, macos-latest]
+        # * macos-13 is x86_64, macos-latest is aarch64.
+        # * ubuntu and windows both fail at the linking stage; they don't
+        #   recognise that my rewrites override the RTS.
+        # * maybe I should use -bargs -static?
         
     runs-on: ${{ matrix.os }}
 
